--- a/ansible/roles/homepage_deploy/templates/homepage-application.yml.j2
+++ b/ansible/roles/homepage_deploy/templates/homepage-application.yml.j2
@@ -21,13 +21,32 @@ spec:
               http:
                 port: 80
                 targetPort: 3000
+
         config:
+          services:
+            - Monitoring:
+                - NextDNS:
+                    href: https://my.nextdns.io
+                    widget:
+                      type: nextdns
+                      profile: 62778c
+                      key: {{ homepage_nextdns_api_token }}
+
+                - Proxmox:
+                    href: https://192.168.226.90:8006
+                    widget:
+                      type: proxmox
+                      url: https://192.168.226.90:8006
+                      username: sfroeber
+                      password: {{ proxmox_api_password }}
+
           widgets:
             - datetime:
                 format:
                   dateStyle: short
                   timeStyle: short
                   hourCycle: h23
+
             - kubernetes:
                 cluster:
                   show: true
@@ -40,19 +59,34 @@ spec:
                   cpu: true
                   memory: true
                   showLabel: true
+
+            - longhorn:
+                expanded: true
+                # Shows a node representing the aggregate values
+                total: true
+                # Shows the node names as labels
+                labels: true
+                # Show the nodes
+                nodes: true
+
           kubernetes:
             mode: cluster
+
           settings: {}
+
         serviceAccount:
           create: true
           name: homepage
+
         enableRbac: true
+
         ingress:
           main:
             enabled: false
+
         env:
           - name: HOMEPAGE_ALLOWED_HOSTS
-            value: "homepage.rohu-shark.ts.net"    
+            value: "homepage.rohu-shark.ts.net"
   destination:
     server: https://kubernetes.default.svc
     namespace: {{ homepage_deploy_namespace }}
