First pass at Omada, but needs work

--- a/ansible/roles/omada_deploy/templates/omada-homepage-ingress.yml.j2
+++ b/ansible/roles/omada_deploy/templates/omada-homepage-ingress.yml.j2
@@ -10,15 +10,14 @@ metadata:
     gethomepage.dev/group: "Network"
     gethomepage.dev/icon: "omada.png"
 spec:
-  ingressClassName: tailscale
   rules:
-    - host: {{ omada_deploy_hostname }}
+    - host: omada
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ omada_deploy_application_name }}
+                name: omada-controller
                 port:
                   number: 8043
