--- a/ansible/roles/crafty_controller_deploy/templates/service.yml.j2
+++ b/ansible/roles/crafty_controller_deploy/templates/service.yml.j2
@@ -21,3 +21,6 @@ spec:
     - name: http-dynmap
       port: 8123
       targetPort: 8123
+    - name: minecraft-1
+      port: 25565
+      targetPort: 25565
