--- a/ansible/roles/homepage_deploy/templates/ingresses/argocd-homepage-ingress.yml.j2
+++ b/ansible/roles/homepage_deploy/templates/ingresses/argocd-homepage-ingress.yml.j2
@@ -13,7 +13,7 @@ metadata:
     gethomepage.dev/widget.url: "https://argocd.rohu-shark.ts.net"
 spec:
   rules:
-    - host: argocd
+    - host: argocd.rohu-shark.ts.net
       http:
         paths:
           - path: /
