--- a/ansible/roles/homepage_deploy/templates/ingresses/argocd-homepage-ingress.yml.j2
+++ b/ansible/roles/homepage_deploy/templates/ingresses/argocd-homepage-ingress.yml.j2
@@ -11,7 +11,7 @@ metadata:
     gethomepage.dev/icon: "argocd.png"
     gethomepage.dev/widget.type: "argocd"
     gethomepage.dev/widget.url: "https://argocd.rohu-shark.ts.net"
-    gethomepage.dev/widget.key: "{{HOMEPAGE_VAR_ARGOCD_TOKEN}}"
+    gethomepage.dev/widget.key: "{{ argocd_homepage_token }}"
 spec:
   rules:
     - host: argocd.rohu-shark.ts.net
