--- a/ansible/roles/crafty_controller_deploy/templates/service.yml.j2
+++ b/ansible/roles/crafty_controller_deploy/templates/service.yml.j2
@@ -9,6 +9,7 @@ metadata:
   annotations:
     tailscale.com/expose: "true"
     tailscale.com/hostname: "crafty-controller"
+    tailscale.com/tags: "tag:k8s,tag:server-games"
 {% endif %}
 spec:
   type: ClusterIP
