--- a/ansible/roles/homepage_deploy/templates/homepage-application.yml.j2
+++ b/ansible/roles/homepage_deploy/templates/homepage-application.yml.j2
@@ -16,7 +16,7 @@ spec:
             annotations:
               tailscale.com/expose: "true"
               tailscale.com/hostname: "homepage"
-              tailscale.com/tags: "tag:k8s,tag:infra-monitoring"
+              tailscale.com/tags: "tag:k8s,tag:infra-monitoring,tag:server-games"
             ports:
               http:
                 port: 80
