--- a/ansible/roles/omada_deploy/templates/omada-homepage-ingress.yml.j2
+++ b/ansible/roles/omada_deploy/templates/omada-homepage-ingress.yml.j2
@@ -11,7 +11,7 @@ metadata:
     gethomepage.dev/icon: "omada.png"
 spec:
   rules:
-    - host: omada
+    - host: {{ omada_deploy_hostname }}
       http:
         paths:
           - path: /
