Updates to crafty

--- a/ansible/roles/argocd_github_repo_create/templates/argocd-repository-secret.yml.j2
+++ b/ansible/roles/argocd_github_repo_create/templates/argocd-repository-secret.yml.j2
@@ -9,4 +9,5 @@ metadata:
 stringData:
   type: git
   url: {{ argocd_github_repo_create_repo_url_ssh }}
-  sshPrivateKey: {{ argocd_github_repo_create_ssh_private_key }}
+  sshPrivateKey: |
+{{ argocd_github_repo_create_ssh_private_key | indent(4, true) }}
