--- a/ansible/roles/synology_csi_deploy/templates/synology_csi.yml.j2
+++ b/ansible/roles/synology_csi_deploy/templates/synology_csi.yml.j2
@@ -42,6 +42,7 @@ spec:
             isDefault: true
             reclaimPolicy: Delete
             test: false
+            volumeBindingMode: WaitForFirstConsumer
             mountOptions:
               - vers=4
             parameters:
